Fix bg image src on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@ body {
 
 @media screen and (max-width: 768px) {
   body {
-    background: url('/confetti-bg-mobile.jpg');
+    background: url('/confetti-bg-mobile-copy.jpg');
   }
 }
 
